# GROUNDED-rag

./: .gitignore  READ.md  README.md  agent.ipynb  data.ipynb  data.py  data_collect.ipynb  data_collect_법령.ipynb  data_collect_자치법규.ipynb  data_db.ipynb  data_qdrant.ipynb  data_update_local.py  index.html  pyproject.toml  qna_generation.ipynb  retrieval.ipynb  vite.config.ts
docs/: rag_vs_graphrag.md
notebooks/graphrag_mvp/: 01_load_sources.ipynb  02_build_graph_payload.ipynb  03_ingest_neo4j.ipynb  04_query_graphrag.ipynb  05_vector_graph_rag.ipynb  README.md
notebooks/research_mvp/: 01_fetch_law.ipynb  02_parse_law.ipynb  02_parse_ordin.ipynb  03_extract_refs.ipynb  03_refs_and_abbr.ipynb  04_build_appendix1_json.ipynb  05_index_qdrant.ipynb  06_run_agent.ipynb  README.md
src/: App.tsx  index.css
src/architecture_agent/: __init__.py  run_agent.py  run_api.py  schemas.py
src/architecture_agent/agent/: __init__.py  graph.py  tools.py
src/architecture_agent/api/: server.py
src/architecture_agent/ingestion/: __init__.py  build_appendix1_json.py  extract_abbr_chunk_llm.py  extract_abbr_llm.py  extract_refs.py  fetch_law.py  index_qdrant.py  parse_law.py  pipeline.py  resolve_abbr.py
src/architecture_agent/service/: zero_hop.py
src/components/: AdminFeedbackPage.tsx  ChatInterface.tsx  ConversationSidebar.tsx  DocumentViewer.tsx  FeedbackDialog.tsx  HomePage.tsx  LoginPage.tsx  WaveSpaceLogo.tsx
src/tests/: test_appendix_lookup.py  test_extract_abbr_chunk_llm.py  test_extract_refs.py  test_graph_pipeline.py  test_parse_law.py  test_resolve_abbr.py
(+8 files in other folders)
